<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Resolution" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/portrait_resolution_prompt_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/portrait_resolution_prompt" />

        <EditText
            android:id="@+id/portrait_resolution_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/portrait_resolution_prompt_textView"
            android:layout_below="@+id/portrait_resolution_prompt_textView"
            android:layout_marginTop="10dp"
            android:ems="5"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/portrait_resolution_separator_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/portrait_resolution_width"
            android:layout_alignBottom="@+id/portrait_resolution_width"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/portrait_resolution_width"
            android:text="@string/multiplier" />

        <EditText
            android:id="@+id/portrait_resolution_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/portrait_resolution_width"
            android:layout_toRightOf="@+id/portrait_resolution_separator_textView"
            android:ems="5"
            android:inputType="number" />

        <TextView
            android:id="@+id/landscape_resolution_prompt_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/portrait_resolution_height"
            android:layout_marginTop="30dp"
            android:text="@string/landscape_resolution_prompt" />

        <CheckBox
            android:id="@+id/keep_analogy_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/landscape_resolution_prompt_textView"
            android:layout_alignLeft="@+id/landscape_resolution_prompt_textView"
            android:layout_marginTop="10dp"
            android:checked="true"
            android:text="@string/mirror_portrait" />

        <EditText
            android:id="@+id/landscape_resolution_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/landscape_resolution_prompt_textView"
            android:layout_below="@+id/keep_analogy_checkBox"
            android:layout_marginTop="10dp"
            android:ems="5"
            android:enabled="false"
            android:inputType="number" />

        <TextView
            android:id="@+id/landscape_resolution_separator_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/landscape_resolution_width"
            android:layout_alignBottom="@+id/landscape_resolution_width"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/landscape_resolution_width"
            android:text="@string/multiplier" />

        <EditText
            android:id="@+id/landscape_resolution_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/landscape_resolution_width"
            android:layout_toRightOf="@+id/landscape_resolution_separator_textView"
            android:ems="5"
            android:enabled="false"
            android:inputType="number" />
        
        <TextView
            android:id="@+id/resolution_prompt_prompt_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/portrait_resolution_prompt_textView"
            android:layout_below="@+id/landscape_resolution_height"
            android:layout_marginTop="30dp"
            android:text="@string/landscape_resolution_prompt" />
        
        <Spinner
    		android:id="@+id/resolution_policy"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content" 
    		android:layout_below="@+id/resolution_prompt_prompt_textView"
    		android:layout_alignLeft="@+id/portrait_resolution_prompt_textView"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/reset_to_default_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/resolution_policy"
            android:layout_marginTop="20dp"
            android:text="@string/reset" 
            android:onClick="resetToDefault"/>

        <Button
            android:id="@+id/apply_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reset_to_default_button"
            android:layout_marginTop="50dp"
            android:text="@string/apply" 
            android:onClick="applySettings"/>

    </RelativeLayout>

</ScrollView>